<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    xmlns:tools="http://schemas.android.com/tools">
    
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="90dp"
        android:layout_height="135dp"
        android:layout_margin="10dp"
        tools:src="@drawable/erased"/>

    <LinearLayout
        android:id="@+id/all_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/image_view">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            tools:text="Erased"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_text"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="22"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=" / "/>

            <TextView
                android:id="@+id/total_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text=" 30"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/status_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/status_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="Currently Watching"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_text"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>